# meson-bug-rust-dep-resolve

./: main.c  meson.build  run.sh
lib/: lib.h  meson.build
lib/lib_ext/: Cargo.toml  meson.build
lib/lib_ext/src/: lib.rs
